--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,16 +44,22 @@ services:
       - "etcd"
       - "minio"
 
-  # elasticsearch:
-  #   container_name: es01
-  #   image: docker.elastic.co/elasticsearch/elasticsearch:8.11.3
-  #   environment:
-  #     - discovery.type=single-node
-  #     - xpack.security.enabled=false # Tắt bảo mật cho mục đích demo
-  #   volumes:
-  #     - ./volumes/es_data:/usr/share/elasticsearch/data
-  #   ports:
-  #     - "9200:9200"
+  elasticsearch:
+    container_name: es01
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.15.1
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms1g -Xmx1g
+    volumes:
+      - ./volumes/es_data:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
 networks:
   default:
